--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -17,7 +17,7 @@
       <%= f.select :language, @task.valid_languages %>
     </div>
   </div>
-  
+
   <div class="control-group">
     <%= f.label :package, :class => 'control-label' %>
     <div class="controls">
@@ -26,12 +26,13 @@
   </div>
 
   <div class="control-group">
-    <%= f.label :task_file , :class => 'control-label' %>
+    <%= f.label :deadline, :class => 'control-label' %>
     <div class="controls">
-      <%= f.file_field  :task_file , :class => 'file_field ' %>
+      <%= f.text_field :deadline, :class => 'datetimepicker', :id => 'datetimepicker', :lang => 'en' %>
     </div>
   </div>
-  
+
+
 
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
