--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -86,6 +86,11 @@
               works_path, :class => 'btn'  %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
               edit_task_path(@task), :class => 'btn' %>
+
+  <%= link_to t('.export', :default => t("Export results")),
+  {:controller => "tasks", :action => "export", :format => "csv"},
+  {:class => 'btn'} %>
+
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
               task_path(@task),
               :method => 'delete',
