--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -32,6 +32,13 @@
     </div>
   </div>
 
+  <div class="control-group">
+    <%= f.label :task_file , :class => 'control-label' %>
+       <div class="controls">
+       <%= f.file_field  :task_file , :class => 'file_field' %>
+      </div>
+    </div>
+
 
 
   <div class="form-actions">
